--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </section>
 
         <section id="redes_sociais">
-
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt=""></a>  <br>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="instagram.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt=""></a> <br>
         </section>
     </main>    
 </body>
